discussion/kv_engine/149739/149739_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45255: Introduce TestingHook

Introduce a simple wrapper class around std::function for use in
tests. Given std::function throws bad_function_call if called when
empty, simpler and safer to have this wrapper class check if empty and
do nothing.

Change-Id: I308aeaa98a2e92dabbf4cf8ec605267f04ab88fb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-03-26 14:07:04.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-26 14:22:34.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29672/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.h:22:10:
fatal error: "utilities/testing_hook.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29672/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34577/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\kvstore.h(24): fatal error C1083: Cannot open include file: "utilities/testing_hook.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34577/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7944/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/manager.h:26:10: error: "testing_hook.h" file not found [clang-diagnostic-error]
#include <testing_hook.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.h:22:10: error: "utilities/testing_hook.h" file not found [clang-diagnostic-error]
#include "utilities/testing_hook.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/passive_stream.h:22:10: error: "utilities/testing_hook.h" file not found [clang-diagnostic-error]
#include "utilities/testing_hook.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.h:24:10: error: "utilities/testing_hook.h" file not found [clang-diagnostic-error]
#include "utilities/testing_hook.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/durability/active_durability_monitor.h:22:10: error: "utilities/testing_hook.h" file not found [clang-diagnostic-error]
#include "utilities/testing_hook.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/durability/passive_durability_monitor.h:22:10: error: "utilities/testing_hook.h" file not found [clang-diagnostic-error]
#include "utilities/testing_hook.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/flusher.h:20:10: error: "utilities/testing_hook.h" file not found [clang-diagnostic-error]
#include "utilities/testing_hook.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:24:10: error: "utilities/testing_hook.h" file not found [clang-diagnostic-error]
#include "utilities/testing_hook.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/warmup.h:20:10: error: "utilities/testing_hook.h" file not found [clang-diagnostic-error]
#include "utilities/testing_hook.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7944/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/manager.h:26:10:
error: "testing_hook.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7944/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8594/ : FAILURE

Compile error at [2021-03-26T14:08:15.329Z] ../kv_engine/engines/ep/src/dcp/active_stream.h:22:10:
fatal error: "utilities/testing_hook.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8594/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9528/ : FAILURE

Compile error at [2021-03-26T14:08:00.251Z] ../kv_engine/engines/ep/src/dcp/active_stream.h:22:10:
fatal error: utilities/testing_hook.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9528/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9664/ : FAILURE

Compile error at [2021-03-26T14:12:03.390Z] ../kv_engine/engines/ep/src/kvstore.h:24:10:
fatal error: utilities/testing_hook.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9664/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9889/ : FAILURE

Compile error at [2021-03-26T14:08:37.187Z] ../kv_engine/engines/ep/src/dcp/active_stream.h:22:10:
fatal error: "utilities/testing_hook.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9889/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17437/ : FAILURE

Compile error at [2021-03-26T14:08:38.502Z] ../kv_engine/engines/ep/src/kvstore.h:24:10:
fatal error: "utilities/testing_hook.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17437/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6488/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
